+-----------+
| CHANGELOG |
+-----------+


[ d2x v4 ]

- Fixed error 002 in method 2 for blocking ios reload.
- Repeated ios reload are now supported by method 2.
- Added support to reload any ios, not only 249.
- Added "return to channel" feature compatible with all games out there.
- Fixed a bug in nand emulation to properly support HDD greater than 1TB.
- Added support for sector size up to 4KB (typically required for hard drives
  greater than 2TB).
- Removed file logging introduced in v3 since has proved harmful to games like
  LostWinds and LostWinds Winter of the Melodies.
- Updated FatFs to 0.8b. This allowed us to remove the workaround on file 
  renaming introduced in d2x v3.
- Fixed a potential buffer overflow while reading a directory.
- Fixed the error code returned by FAT_Readdir when the requested folder is
  an existing file (now all Strong Bad episodes are working properly).
- Fixed a bug in FAT_GetStats (now games like Max & the Magic Marker,
  FFCC My Life as a King and FFCC My Life as a Darklord are working properly).
- Fixed a bug in FAT_Seek to prevent from increasing the file size when seeking
  out of the file.
- Fixed the length of the output buffer in FAT_ReadDir.
- Changed timing logic in FAT module.
- Minor changes and code clean up.

  NOTE:
  Currently ios reload block improvements are only relevant to disc loading!!!
  Blocking ios reload for usb loaders will be investigated in future releases.


[ d2x v3 ]

- Fixed a bug in nand usage causing save creation failure in WiiWare games
  like Tetris Party, FFCC My Life as a King and Brain Challenge.
- Fixed the deletion of folder /tmp on nand emulation start up.
- Added a workaround to fix a bug on file renaming causing the failure on 
  the 2nd save in games like The Will of Dr.Frankenstein.
- Added multiple partition support for nand emulation (default partition is 0
  for backward compatibility).
- Implemented logging system to make debugging easier.