@@ -1,0 +1,11 @@
+#ifndef _CONFIG_H_
+#define _CONFIG_H_
+
+#include "types.h"
+
+/* Prototypes */
+s32 Config_Load(void *cfg, u32 size);
+s32 Config_Save(void *cfg, u32 size);
+
+#endif
+
