@@ -2,6 +2,7 @@
  * DIP plugin for Custom IOS.
  *
  * Copyright (C) 2008-2010 Waninkoko, WiiGator.
+ * Copyright (C) 2011 davebaol.
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -18,23 +19,25 @@
  */
 
 #include "plugin.h"
+#include "syscalls.h"
 #include "tools.h"
 
 /* Macros */
 #define Write8(addr, val)	\
-	*(u8 *)addr = val;	\
-	DCFlushRange((void *)addr, sizeof(u8));
+	*(u8 *)(addr) = (val);	\
+	DCFlushRange((void *)(addr), sizeof(u8));
 
 #define Write16(addr, val)	\
-	*(u16 *)addr = val;	\
-	DCFlushRange((void *)addr, sizeof(u16));
+	*(u16 *)(addr) = (val);	\
+	DCFlushRange((void *)(addr), sizeof(u16));
 
 #define Write32(addr, val)	\
-	*(u32 *)addr = val;	\
-	DCFlushRange((void *)addr, sizeof(u32));
+	*(u32 *)(addr) = (val);	\
+	DCFlushRange((void *)(addr), sizeof(u32));
  
 
 /* Addresses */
+u32 addr_initStage2  = 0;
 u32 addr_handleIoctl = 0;
 u32 addr_handleCmd   = 0;
 u32 addr_alloc       = 0;
@@ -48,7 +51,11 @@ void Patch_DipModule(u32 version)
 {
 	switch (version) {
 	/** 07/11/08 14:34:26 **/
-	case 0x48776F72:
+	case 0x48776F72:        // IOS: 53v5662, 55v5662
+		/* Patch DVD driver init stage 2 */
+		Write32(0x20200074, 0x4B004718);
+		Write32(0x20200078, (u32)DI_EmulateInitStage2);
+
 		/* Patch IOCTL handler */
 		Write32(0x20200400, 0x4B004718);
 		Write32(0x20200404, (u32)DI_EmulateIoctl);
@@ -58,6 +65,7 @@ void Patch_DipModule(u32 version)
 		Write32(0x20200EFC, (u32)DI_EmulateCmd);
 
 		/* Set addresses */
+		addr_initStage2  = 0x2020007C + 1;
 		addr_readHash    = 0x20202A70 + 1;
 		addr_handleIoctl = 0x2020040C + 1;
 		addr_handleCmd   = 0x20200F04 + 1;
@@ -69,7 +77,11 @@ void Patch_DipModule(u32 version)
 		break;
 
 	/** 07/24/08 20:08:44 **/
-	case 0x4888E14C:
+	case 0x4888E14C:        // IOS: 36v3607, 38v4123
+		/* Patch DVD driver init stage 2 */
+		Write32(0x20200068, 0x4B004718);
+		Write32(0x2020006C, (u32)DI_EmulateInitStage2);
+
 		/* Patch IOCTL handler */
 		Write32(0x202003B8, 0x4B004718);
 		Write32(0x202003BC, (u32)DI_EmulateIoctl);
@@ -79,6 +91,7 @@ void Patch_DipModule(u32 version)
 		Write32(0x20200D30, (u32)DI_EmulateCmd);
 
 		/* Set addresses */
+		addr_initStage2  = 0x20200070 + 1;
 		addr_readHash    = 0x20202874 + 1;
 		addr_handleIoctl = 0x202003C4 + 1;
 		addr_handleCmd   = 0x20200D38 + 1;
@@ -92,7 +105,11 @@ void Patch_DipModule(u32 version)
 	/** 11/24/08 15:39:09 **/
 	/** 06/03/09 07:49:09 **/
 	case 0x492ACA9D:
-	case 0x4A262AF5:
+	case 0x4A262AF5:        // IOS: 37v5662, 56v5661, 57v5918, 58v6175, 60v6174, 61v5661, 70v6687, 80v6943
+		/* Patch DVD driver init stage 2 */
+		Write32(0x20200074, 0x4B004718);
+		Write32(0x20200078, (u32)DI_EmulateInitStage2);
+
 		/* Patch IOCTL handler */
 		Write32(0x20200400, 0x4B004718);
 		Write32(0x20200404, (u32)DI_EmulateIoctl);
@@ -102,6 +119,7 @@ void Patch_DipModule(u32 version)
 		Write32(0x20200EFC, (u32)DI_EmulateCmd);
 
 		/* Set addresses */
+		addr_initStage2  = 0x2020007C + 1;
 		addr_readHash    = 0x20202944 + 1;
 		addr_handleIoctl = 0x2020040C + 1;
 		addr_handleCmd   = 0x20200F04 + 1;
@@ -109,6 +127,11 @@ void Patch_DipModule(u32 version)
 		addr_free        = 0x2020093C + 1;
 		addr_printf      = 0x20203750 + 1;
 		dip_readctrl     = (u8 *)0x2022CD60;
+
+		break;
+
+	default:
+		write("DIPP: Error -> Can't patch DI module (unknown version)\n");
 
 		break;
 	}
