@@ -1,7 +1,7 @@
 /*
- * DIP plugin for Custom IOS.
+ * ES plugin for Custom IOS.
  *
- * Copyright (C) 2008-2010 Waninkoko, WiiGator.
+ * Copyright (C) 2011 davebaol.
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -17,21 +17,30 @@
  * along with this program. If not, see <http://www.gnu.org/licenses/>.
  */
 
-#ifndef _DIP_CALLS_H_
-#define _DIP_CALLS_H_
-
+#include "syscalls.h"
 #include "types.h"
 
-/* Prototypes */
-s32   DI_ReadHash(void); 
-void *DI_Alloc(u32 size, u32 align);
-void  DI_Free(void *ptr);
-void  DI_Printf(const char *fmt, ...);
+#define IOCTL_DI_SAVE_CONFIG	0xFE
 
-/* DIP handlers */
-s32 DI_HandleIoctl(void *buffer, u32 fd);
-s32 DI_HandleCmd(void *inbuf, const void *outbuf, u32 size);
+static u32 inbuf[8]  ATTRIBUTE_ALIGN(32);
+static u32 outbuf[8] ATTRIBUTE_ALIGN(32);
 
-s32 DI_InitStage2(void); 
+s32 DI_Config_Save(void)
+{
+	s32 fd, ret;
 
-#endif
+	/* Open /dev/di */
+	fd = os_open("/dev/di", 0);
+	if (fd < 0)
+		return fd;
+
+	/* Save config */
+	inbuf[0] = IOCTL_DI_SAVE_CONFIG << 24;
+	ret = os_ioctl(fd, IOCTL_DI_SAVE_CONFIG, inbuf, sizeof(inbuf), outbuf, sizeof(outbuf));
+
+	/* Close /dev/di */
+	os_close(fd);
+
+	return ret;
+}
+                   
