@@ -1,0 +1,10 @@
+#ifndef _DI_H_
+#define _DI_H_
+
+#include "types.h"
+
+/* Prototypes */
+s32 DI_Config_Save(void);
+
+#endif
+
